# Arcade

./: CMakeLists.txt  Doxyfile  README.md  main.cpp
Abstract/: ADisplay.cpp  ADisplay.hpp  AGame.cpp  AGame.hpp
Assets/Nibbler/Configuration/: map1.txt  map2.txt  map3.txt
Assets/Snake/Configuration/: configmap.txt
Core/: Core.cpp  Core.hpp  DLloader.cpp  DLloader.hpp
Games/Menu/: Menu.cpp  Menu.hpp
Games/Nibbler/: Nibbler.cpp  Nibbler.hpp
Games/Snake/: Snake.cpp  Snake.hpp
Graphical_libraries/Ncurses/: Ncurses.cpp  Ncurses.hpp
Graphical_libraries/SDL2/: Sdl2.cpp  Sdl2.hpp
Graphical_libraries/SFML/: Sfml.cpp  Sfml.hpp
interface/: IDisplay.hpp  IGame.hpp  Info.hpp
